crates/toml_edit/tests/fixtures/invalid/key/duplicate.stderr
TOML parse error at line 3, column 1
  |
3 | name = "Pradyun"
  | ^
Duplicate key `name` in document root
